# ford_circles

./: .gitignore  .gitmodules  main.css  main.html
ford_circles_wasm/: Cargo.toml  index.html  index.js
ford_circles_wasm/src/: lib.rs
ford_circles_wasm/src/calculate_circles/: mod.rs  tests.rs
ford_circles_wasm/src/core/: circle.rs  decimal.rs  mod.rs  rational.rs
ford_circles_wasm/src/renderer/: circle_renderer.rs  interface.rs  mod.rs  model.rs  renderer.rs
ford_circles_wasm/src/renderer/circle_renderer/: circle_model.rs  mod.rs
ford_circles_wasm/src/renderer/circle_renderer/circle_tess/: mod.rs  tests.rs
ford_circles_wasm/src/renderer/circle_renderer/shaders/: circle_shader.frag.glsl  circle_shader.vert.glsl
get_circles/: Cargo.toml
get_circles/src/: circle.rs  decimal.rs  ford_circle.rs  lib.rs  rational.rs  tests.rs
