[package]
name = "ford-circles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
cgmath = "0.18"
gcd = "2.0.2"
log = "0.4.11"
luminance = "0.45"
luminance-web-sys = "0.4"
luminance-webgl = "0.5"
num-rational = "0.4"
palette = "0.6"
wasm-bindgen = "0.2.63"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.44"
features = [
    "Window",
    "console",
]